# capstone-project-team-5

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo_file_walker.py  milestone-2-api-documentation.md  pyproject.toml  test_contributors_demo.py
db/: artifact_miner_schema.sql  user_config.sql
docs/: INCREMENTAL_UPLOAD_GUIDE.md  INSTALLATION.md  TEST_REPORT.md  UNIFIED_SYSTEM_ARCHITECTURE.md
frontend/: .gitignore  jest.config.json  package-lock.json  package.json  tailwind.config.js
individual/: README.md  chris-log.md  ethan-log.md  ojus-log.md  ribhav-log.md  ronit-log.md  sparsh-log.md
team/: README.md
tests/: conftest.py  test_ai_bullets.py  test_api.py  test_artifact_miner_schema.py  test_bullet_generator.py  test_c_analyzer.py  test_cli_per_project.py  test_code_analysis_integration.py  test_code_analysis_persistence.py  test_collab_detect.py  test_consent.py  test_consent_api.py  test_contribution_metrics.py  test_contributor_analysis.py  test_db_integration.py  test_detection.py  test_education_service.py  test_export.py  test_file_diff.py  test_file_walker.py  test_git_ingest_local.py  test_git_utils.py  test_incremental_upload.py  test_item_retriever.py  test_java_analyzer.py  test_js_bullets.py  test_js_code_analyzer.py  test_llm_providers.py  test_llm_service.py  test_local_bullets.py  test_main.py  test_portfolio_api.py  test_portfolio_deletion.py  test_portfolio_persistence.py  test_portfolio_retriever.py  test_portfolio_service.py  test_proficiency_api.py  test_proficiency_service.py  test_project_analysis.py  (+36 more)
(+214 files in other folders)
